--- a/style.css
+++ b/style.css
@@ -29,8 +29,20 @@ align-items: center;
     height: 150px;
     margin: -30px;
     border-radius:50%;
-    border: 4px  solid #fff;
-    border-top: 4px solid #1b43f5fb;
+    border: 4px  solid transparent;
+    border-top: 8px solid #1bc9f5fb;
+    animation: animate 4s linear infinite;
+}
+@keyframes animate
+{
+    0%
+    {
+        transform: rotate(0deg);
+    }
+    100%
+    {
+        transform: rotate(360deg);
+    }
 }
 .ring::before
 {
@@ -41,13 +53,73 @@ align-items: center;
     border-radius: 50%;
     width: 15px;
     height: 15px;
-    background: #40f1e9fd;
-    box-shadow: 0 0 0 2px #91bebefb,0 0 0 4px #81b6b1fb,0 0 0 8px #73c0c0fb ,0 0 0 8px #5bbdb8fb,0 0 0 20px #1ebdb2fb;
+    background: #49d8f1fd;
+    box-shadow: 0 0 0 2px #afccccfb,0 0 0 4px #9ab4c0fb,0 0 0 8px #4ac0c0fb ,0 0 0 8px #4bbbb5fb ,0 0 0 13px #38e8f5b7;
 }
+.ring:nth-child(2)
+{
+    animation: animate2 4s linear infinite;
+    animation-delay: -1s;
+    border-top: 4px solid transparent;
+    border-left: 4px solid rgba(55, 235, 38, 0.664);
+}
+.ring:nth-child(2)::before
+{
+    content:"" ;
+    position: absolute;
+    top:initial;
+    bottom: 12px;
+    left: 12px;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    background: #74e632fd;
+    box-shadow: 0 0 0 2px #b6e0bcfb,0 0 0 4px #9ab4c0fb,0 0 0 8px #52c27dfb ,0 0 0 8px #9bdd75fb ,0 0 0 13px #3ef538a1;
+}
+@keyframes animate2
+{
+    0%
+    {
+        transform: rotate(360deg);
+    }
+    100%
+    {
+        transform: rotate(0deg);
+    }
+}
+
 .ring:nth-child(3)
 {
+    animation: animate3 4s linear infinite;
+    animation-delay: -3s;
     position: absolute;
     top: -66.66px;
+    border-top: 4px solid transparent;
+    border-left: 4px solid #e41db9fd;
+}
+.ring:nth-child(3)::before
+{
+    content:"" ;
+    position: absolute;
+    top:initial;
+    bottom: 12px;
+    left: 12px;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    background: #e41db9fd;
+    box-shadow: 0 0 0 2px #e41cf833,0 0 0 4px #e41cf833,0 0 0 8px #e41cf833 ,0 0 0 8px #e41cf8 ,0 0 0 13px #e500fa;
+}
+@keyframes animate3
+{
+    0%
+    {
+        transform: rotate(360deg);
+    }
+    100%
+    {
+        transform: rotate(0deg);
+    }
 }
 .container p
 {
@@ -55,7 +127,7 @@ align-items: center;
     color: #fff;
     font-size: 0.6cm;
     font-family: consolas;
-    bottom: -80px;
+    bottom: -100px;
     letter-spacing: 0.15cm;
 
 }
